--- a/src/Instruction.html
+++ b/src/Instruction.html
@@ -41,7 +41,13 @@
 <br>_________
 <br>
 <br>-Скопировать папку Security в C:\%ProgramFiles%\Java\jdk1.7.0_21\jre\lib с заменой
-<br>-В C:\%ProgramFiles%\Java\jdk1.7.0_21\jre\lib найти джарники JCPxml.jar,xmlsec,commos-logging,serializer,XMLDSigRI,wss4j,xalan
+<br>-В C:\%ProgramFiles%\Java\jdk1.7.0_21\jre\lib найти джарники
+JCPxml.jar+,
+xmlsec,
+commos-logging,
+serializer,
+XMLDSigRI+,
+wss4j,xalan
 и удалить нахрен!
 
 </body>
