--- a/src/Instruction.html
+++ b/src/Instruction.html
@@ -50,5 +50,10 @@ XMLDSigRI+,
 wss4j,xalan
 и удалить нахрен!
 
+
+<br>------------------
+<br>для создания trusted cacert надо
+<br>cmd -> cd C:\Program Files (x86)\Java\jdk1.7.0_21\bin ->
+<br>keytool -keystore "C:\Mycacert" -import -trustcacerts -alias "MyAlias" -file "C:\My.crt"
 </body>
 </html>
